half way point html

--- a/index.html
+++ b/index.html
@@ -5,20 +5,25 @@
 </head>
     <div class="container1">
         <div class="header">
-            <div class="header-logo"
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
+            <div class="header-logo"></div>
+            <div class="headerlinks-1"></div>
+            <div class="headerlinks-2"></div>
+            <div class="headerlinks-3"></div>
         </div>
-            <div class="body-1">
+        <div class="body">
+            <div class="body-1"></div>
             <div class="button">Sign up</div>
             <div class="image"><img src="./img/img.jpg" atl="filler"></div>
         </div>
     </div>
         <div class="container2">
-
-        
-        </div>
+            <div class="header-2"></div>
+            <div class="img-1"><img src=".img/img.jpg alt="filler">"</div>
+            <div class="img-2"><img src=".img/img.jpg alt="filler">"</div>
+            <div class="img-3"><img src=".img/img.jpg alt="filler">"</div>
+            <div class="img-4"><img src=".img/img.jpg alt="filler">"</div>
+        </div></div>
+    </div>
     <div class="container3">
         
     </div>
