skeleton of html completed

--- a/index.html
+++ b/index.html
@@ -5,34 +5,41 @@
 </head>
     <div class="container1">
         <div class="header">
-            <div class="header-logo"></div>
+            <div class="header-logo"><img src=".img/logo.jpg" alt="website Logo"></div>
             <div class="headerlinks-1"></div>
             <div class="headerlinks-2"></div>
             <div class="headerlinks-3"></div>
         </div>
         <div class="body">
-            <div class="body-1"></div>
+            <div class="body-1"><h1>Filler</h1></div>
+            <div class="body-1"><p>Filler</p></div>
             <div class="button">Sign up</div>
-            <div class="image"><img src="./img/img.jpg" atl="filler"></div>
+            <div class="image"><img src="./img/img1.jpg" atl="filler"></div>
         </div>
     </div>
         <div class="container2">
-            <div class="header-2"></div>
-            <div class="img-1"><img src=".img/img.jpg alt="filler">"</div>
-            <div class="img-2"><img src=".img/img.jpg alt="filler">"</div>
-            <div class="img-3"><img src=".img/img.jpg alt="filler">"</div>
-            <div class="img-4"><img src=".img/img.jpg alt="filler">"</div>
-        </div></div>
+            <div class="header-2"><h2>Random code Filler</h2></div>
+            <div class="img-1"><img src=".img/img2.jpg" alt=filler"><p>temp text</p></div>
+            <div class="img-2"><img src=".img/img3.jpg" alt=filler"><p>temp text</p></div>
+            <div class="img-3"><img src=".img/img4.jpg" alt=filler"><p>temp text</p></div>
+            <div class="img-4"><img src=".img/img5.jpg" alt=filler"><p>temp text</p></div>
+        </div>
     </div>
     <div class="container3">
-        
+        <div><h3>more filler code</h3></div>    
+        <div><h4>Fillers code</h4></div>
     </div>
     <div class="container4">
-        
+        <div>
+            <div><h5>Temp filler</h5></div>
+            <div><p>More Filler</p></div>
+            <div class="button-2">Sign up</div>
+        </div>
     </div>
     <footer>
-
-
+        <div>
+            <p>Copyrigtht etc</p>
+        </div>
     </footer>
 
 
