--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title></title>
+    <link rel="Stylesheet" href=./styles.css>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,400&display=swap" rel="stylesheet">
 </head>
     <div class="container1">
         <div class="header">
@@ -13,7 +17,7 @@
         <div class="body">
             <div class="body-1"><h1>Filler</h1></div>
             <div class="body-1"><p>Filler</p></div>
-            <div class="button">Sign up</div>
+            <div class="button-1">Sign up</div>
             <div class="image"><img src="./img/img1.jpg" atl="filler"></div>
         </div>
     </div>
@@ -30,18 +34,13 @@
         <div><h4>Fillers code</h4></div>
     </div>
     <div class="container4">
-        <div>
+        <div class="call2action">
             <div><h5>Temp filler</h5></div>
             <div><p>More Filler</p></div>
             <div class="button-2">Sign up</div>
         </div>
     </div>
     <footer>
-        <div>
-            <p>Copyrigtht etc</p>
-        </div>
+            <p class="footerp">Copyrigtht etc</p>       
     </footer>
-
-
-
 </html>
