css making some progress, buttons looks nice

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,400&display=swap" rel="stylesheet">
 </head>
+<body>
     <div class="container1">
         <div class="header">
-            <div class="header-logo"><img src=".img/logo.jpg" alt="website Logo"></div>
-            <div class="headerlinks-1"></div>
-            <div class="headerlinks-2"></div>
-            <div class="headerlinks-3"></div>
+            <div class="header-logo"><h6>Header Logo</h6></div>
+                <div class="hlinks">
+                    <div class="headerlinks-1"><a href="https://www.google.com">Googles</a></div>
+                    <div class="headerlinks-2"><a href="https://www.amazon.com">Amazon</a></div>
+                    <div class="headerlinks-3"><a href="https://www.Facebook.com">Facebook</a></div>
+                </div>    
         </div>
         <div class="body">
             <div class="body-1"><h1>Filler</h1></div>
@@ -43,4 +46,5 @@
     <footer>
             <p class="footerp">Copyrigtht etc</p>       
     </footer>
+</body>
 </html>
