--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container1">
         <div class="header">
             <div class="header-logo"><h6>Header Logo</h6></div>
+
                 <div class="hlinks">
                     <div class="headerlinks-1"><a href="https://www.google.com">Googles</a></div>
                     <div class="headerlinks-2"><a href="https://www.amazon.com">Amazon</a></div>
@@ -18,33 +19,34 @@
                 </div>    
         </div>
         <div class="body">
-            <div class="body-1"><h1>Filler</h1></div>
-            <div class="body-1"><p>Filler</p></div>
+            <div class="body-1"><h1>I Love this<br> Website!</h1></div>
+            <div class="body-11"><p>A brief description onn what this website is about. <br>maybe one to two sentences.</p></div>
             <div class="button-1">Sign up</div>
             <div class="image"><img src="./img/img1.jpg" atl="filler"></div>
         </div>
     </div>
+    
         <div class="container2">
-            <div class="header-2"><h2>Random code Filler</h2></div>
+            <div class="rndinfo"><h2>Random code Filler</h2></div>
+
             <div class="img-1"><img src=".img/img2.jpg" alt=filler"><p>temp text</p></div>
             <div class="img-2"><img src=".img/img3.jpg" alt=filler"><p>temp text</p></div>
             <div class="img-3"><img src=".img/img4.jpg" alt=filler"><p>temp text</p></div>
             <div class="img-4"><img src=".img/img5.jpg" alt=filler"><p>temp text</p></div>
         </div>
-    </div>
     <div class="container3">
-        <div><h3>more filler code</h3></div>    
-        <div><h4>Fillers code</h4></div>
+        <div class="move"><h3>Work hard for what you want because it won't come to you without a fight. You have to be strong and courageous and know that you can do anything you put your mind to. If somebody puts you down or criticizes you, just keep on believing in yourself and turn it into something positive.</h3></div>    
+        <div><h4>-Leah LaBelle</h4></div>
     </div>
     <div class="container4">
         <div class="call2action">
-            <div><h5>Temp filler</h5></div>
-            <div><p>More Filler</p></div>
+            <div class="test1"><h5>Call to Action! Its time!</h5></div>
+            <div class="test2"><p class="c2c">Sign up for our product by clicking that button over there!</p></div>
             <div class="button-2">Sign up</div>
         </div>
     </div>
     <footer>
-            <p class="footerp">Copyrigtht etc</p>       
+            <p class="footerp">Copyrigtht</p>       
     </footer>
 </body>
 </html>
