working on second container

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
             <div class="image"><img src="./img/img1.jpg" atl="filler"></div>
         </div>
     </div>
-    
+
         <div class="container2">
             <div class="rndinfo"><h2>Random code Filler</h2></div>
 
-            <div class="img-1"><img src=".img/img2.jpg" alt=filler"><p>temp text</p></div>
-            <div class="img-2"><img src=".img/img3.jpg" alt=filler"><p>temp text</p></div>
-            <div class="img-3"><img src=".img/img4.jpg" alt=filler"><p>temp text</p></div>
-            <div class="img-4"><img src=".img/img5.jpg" alt=filler"><p>temp text</p></div>
+            <ul class="imgs">
+                    <li><div class="img-1"><img src=".img/img2.jpg" alt=filler"><p>temp text</p></div></li>
+                    <li><div class="img-2"><img src=".img/img3.jpg" alt=filler"><p>temp text</p></div></li>
+                    <li><div class="img-3"><img src=".img/img4.jpg" alt=filler"><p>temp text</p></div></li>
+                    <li><div class="img-4"><img src=".img/img5.jpg" alt=filler"><p>temp text</p></div></li>
+            </ul>    
         </div>
     <div class="container3">
         <div class="move"><h3>Work hard for what you want because it won't come to you without a fight. You have to be strong and courageous and know that you can do anything you put your mind to. If somebody puts you down or criticizes you, just keep on believing in yourself and turn it into something positive.</h3></div>    
