hover effect on buttons, centered d2 text

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
             <div class="image"><img src="./img/img1.jpg" atl="filler"></div>
         </div>
     </div>
-
+    <h2 class="rndinfo">Random code Filler</h2>
         <div class="container2">
-            <div class="rndinfo"><h2>Random code Filler</h2></div>
 
             <ul class="imgs">
                     <li><div class="img-1"><img src=".img/img2.jpg" alt=filler"><p>temp text</p></div></li>
