--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </ul>    
         </div>
     <div class="container3">
-        <div class="move"><h3>Work hard for what you want because it won't come to you without a fight. You have to be strong and courageous and know that you can do anything you put your mind to. If somebody puts you down or criticizes you, just keep on believing in yourself and turn it into something positive.</h3></div>    
+        <div class="move"><h3>Work hard for what you want because it won't come to you without a fight. 
+            You have to be strong and courageous and know that you can do anything you put your mind to. If somebody 
+            puts you down or criticizes you, just keep on believing in yourself and turn it into something positive.</h3></div>    
         <div><h4>-Leah LaBelle</h4></div>
     </div>
     <div class="container4">
