--- a/index.html
+++ b/index.html
@@ -10,29 +10,33 @@
 <body>
     <div class="container1">
         <div class="header">
-            <div class="header-logo"><h6>Header Logo</h6></div>
+            <div class="header-logo" >
+                <div class="img-5">
+                <img src="./img/dog5.png" alt="filler" class="images dog5">
+                </div>
+            </div>
 
                 <div class="hlinks">
-                    <div class="headerlinks-1"><a href="https://www.google.com">Googles</a></div>
-                    <div class="headerlinks-2"><a href="https://www.amazon.com">Amazon</a></div>
-                    <div class="headerlinks-3"><a href="https://www.Facebook.com">Facebook</a></div>
+                    <div class="headerlinks-1"><a href="#about">About</a></div>
+                    <div class="headerlinks-2"><a href="#img">Photos</a></div>
+                    <div class="headerlinks-3"><a href="#call2action">Sign Up</a></div>
                 </div>    
         </div>
-        <div class="body">
-            <div class="body-1"><h1>I Love this<br> Website!</h1></div>
-            <div class="body-11"><p>A brief description onn what this website is about. <br>maybe one to two sentences.</p></div>
+        <div class="body" >
+            <div class="body-1" id="about"><h1>Cute Dogs<br> Daily!</h1></div>
+            <div class="body-11"><p>Blessing the world with your daily dose of cute pictures <br>showing these amazing four legged fellas.</p></div>
             <div class="button-1">Sign up</div>
-            <div class="image"><img src="./img/img1.jpg" atl="filler"></div>
+            <div class="image img-0"><img src="./img/dog1.png" atl="filler" class="images dog1"></div>
         </div>
     </div>
-    <h2 class="rndinfo">Random code Filler</h2>
+    <h2 class="rndinfo">Cuteness Overload</h2>
         <div class="container2">
 
-            <ul class="imgs">
-                    <li><div class="img-1"><img src=".img/img2.jpg" alt=filler"><p>temp text</p></div></li>
-                    <li><div class="img-2"><img src=".img/img3.jpg" alt=filler"><p>temp text</p></div></li>
-                    <li><div class="img-3"><img src=".img/img4.jpg" alt=filler"><p>temp text</p></div></li>
-                    <li><div class="img-4"><img src=".img/img5.jpg" alt=filler"><p>temp text</p></div></li>
+            <ul class="imgs" id="img">
+                    <li><div class="img-1"><img src="./img/dog2.png" alt=filler" class="images dog2"><p>temp text</p></div></li>
+                    <li><div class="img-2"><img src="./img/dog3.png" alt=filler" class="images"><p>temp text</p></div></li>
+                    <li><div class="img-3"><img src="./img/dog4.png" alt=filler" class="images"><p>temp text</p></div></li>
+                    <li><div class="img-4"><img src="./img/dog0.png" alt=filler" class="images"><p>temp text</p></div></li>
             </ul>    
         </div>
     <div class="container3">
@@ -42,14 +46,14 @@
         <div><h4>-Leah LaBelle</h4></div>
     </div>
     <div class="container4">
-        <div class="call2action">
+        <div class="call2action" id="call2action">
             <div class="test1"><h5>Call to Action! Its time!</h5></div>
-            <div class="test2"><p class="c2c">Sign up for our product by clicking that button over there!</p></div>
+            <div class="test2"><p class="c2c">Sign up for daily cute dog pictures and positiv quotes by clicking that button over there!</p></div>
             <div class="button-2">Sign up</div>
         </div>
     </div>
     <footer>
-            <p class="footerp">Copyrigtht</p>       
+            <p class="footerp">Copyrigtht 2021 </p>       
     </footer>
 </body>
 </html>
