--- a/index.html
+++ b/index.html
@@ -1,59 +1,106 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title></title>
     <link rel="Stylesheet" href=./styles.css>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,400&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="container1">
-        <div class="header">
-            <div class="header-logo" >
-                <div class="img-5">
-                <img src="./img/dog5.png" alt="filler" class="images dog5">
-                </div>
-            </div>
-
-                <div class="hlinks">
-                    <div class="headerlinks-1"><a href="#about">About</a></div>
-                    <div class="headerlinks-2"><a href="#img">Photos</a></div>
-                    <div class="headerlinks-3"><a href="#call2action">Sign Up</a></div>
-                </div>    
+      <div class="header">
+        <div class="hlinks">
+          <div class="headerlinks-1"><a href="#about">About</a></div>
+          <div class="headerlinks-2"><a href="#img">Photos</a></div>
+          <div class="headerlinks-3"><a href="#call2action">Sign Up</a></div>
         </div>
-        <div class="body" >
-            <div class="body-1" id="about"><h1>Cute Dogs<br> Daily!</h1></div>
-            <div class="body-11"><p>Blessing the world with your daily dose of cute pictures <br>showing these amazing four legged fellas.</p></div>
-            <div class="button-1">Sign up</div>
-            <div class="image img-0"><img src="./img/dog1.png" atl="filler" class="images dog1"></div>
+        <div class="header-logo">
+          <div class="img-5">
+            <img src="./img/dog5.png" alt="filler" class="images dog5" />
+          </div>
         </div>
+      </div>
+      <div class="body22">
+        <div class="lftSide">
+          <div class="body-1" id="about">
+            <h1>
+              Cute Dogs<br />
+              Daily!
+            </h1>
+          </div>
+          <div class="body-11">
+            <p>
+              Blessing the world with your daily dose of cute pictures
+              <br />showing these amazing four legged fellas.
+            </p>
+          </div>
+          <div class="button-1">Sign up</div>
+          <div class="st"></div>
+        </div>
+        <div class="image img-0">
+          <img src="./img/dog1.png" atl="filler" class="images dog1" />
+        </div>
+      </div>
     </div>
     <h2 class="rndinfo">Cuteness Overload</h2>
-        <div class="container2">
-
-            <ul class="imgs" id="img">
-                    <li><div class="img-1"><img src="./img/dog2.png" alt=filler" class="images dog2"><p>temp text</p></div></li>
-                    <li><div class="img-2"><img src="./img/dog3.png" alt=filler" class="images"><p>temp text</p></div></li>
-                    <li><div class="img-3"><img src="./img/dog4.png" alt=filler" class="images"><p>temp text</p></div></li>
-                    <li><div class="img-4"><img src="./img/dog0.png" alt=filler" class="images"><p>temp text</p></div></li>
-            </ul>    
-        </div>
+    <div class="container2">
+      <ul class="imgs" id="img">
+        <li>
+          <div class="img-1">
+            <img src="./img/dog2.png" alt=filler" class="images dog2">
+            <p>temp text</p>
+          </div>
+        </li>
+        <li>
+          <div class="img-2">
+            <img src="./img/dog3.png" alt=filler" class="images">
+            <p>temp text</p>
+          </div>
+        </li>
+        <li>
+          <div class="img-3">
+            <img src="./img/dog4.png" alt=filler" class="images">
+            <p>temp text</p>
+          </div>
+        </li>
+        <li>
+          <div class="img-4">
+            <img src="./img/dog0.png" alt=filler" class="images">
+            <p>temp text</p>
+          </div>
+        </li>
+      </ul>
+    </div>
     <div class="container3">
-        <div class="move"><h3>Work hard for what you want because it won't come to you without a fight. 
-            You have to be strong and courageous and know that you can do anything you put your mind to. If somebody 
-            puts you down or criticizes you, just keep on believing in yourself and turn it into something positive.</h3></div>    
-        <div><h4>-Leah LaBelle</h4></div>
+      <div class="move">
+        <h3>
+          Work hard for what you want because it won't come to you without a
+          fight. You have to be strong and courageous and know that you can do
+          anything you put your mind to. If somebody puts you down or criticizes
+          you, just keep on believing in yourself and turn it into something
+          positive.
+        </h3>
+      </div>
+      <div><h4>-Leah LaBelle</h4></div>
     </div>
     <div class="container4">
-        <div class="call2action" id="call2action">
-            <div class="test1"><h5>Call to Action! Its time!</h5></div>
-            <div class="test2"><p class="c2c">Sign up for daily cute dog pictures and positiv quotes by clicking that button over there!</p></div>
-            <div class="button-2">Sign up</div>
+      <div class="call2action" id="call2action">
+        <div class="test1"><h5>Call to Action! Its time!</h5></div>
+        <div class="test2">
+          <p class="c2c">
+            Sign up for daily cute dog pictures and positiv quotes by clicking
+            that button over there!
+          </p>
         </div>
+        <div class="ts"><div class="button-2">Sign up</div></div>
+      </div>
     </div>
     <footer>
-            <p class="footerp">Copyrigtht 2021</p>       
+      <p class="footerp">Copyrigtht 2021</p>
     </footer>
-</body>
+  </body>
 </html>
